--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Raman123-2003.github.io/My-Notes-keeper",
+  "homepage": "https://Raman123-2003.github.io/NotesKeeper",
   "name": "react-notes-app",
   "version": "0.1.0",
   "private": true,
